fix log cookie
